Fixed cannot display list food on the menu