@@ -138,13 +138,13 @@ public class FoodServiceImpl implements FoodService{
 			Optional<Integer> quantity, Optional<Integer> view, Optional<Long> createDate,
 			Optional<Boolean> isDisplay, Optional<Long> category_id, Pageable pageable) {
 		List<Food> list = getByKeywordEng(keyword,pageable);
-		if(priceMin.isPresent() && priceMin.get()>=0) list = list.stream().filter(o-> o.getPrice() >= priceMin.get()).toList();
-		if(priceMax.isPresent() && priceMax.get()>=0 ) list = list.stream().filter(o-> o.getPrice() <= priceMax.get()).toList();
-		if(quantity.isPresent()) list = list.stream().filter(o-> o.getQuantityLimit() >= quantity.get()).toList();
-		if(view.isPresent()) list = list.stream().filter(o-> o.getViewCount() >= view.get()).toList();
-		if(createDate.isPresent()) list = list.stream().filter(o-> o.getCreateDate().getTime() >=  createDate.get()).toList();
-		if(isDisplay.isPresent()) list = list.stream().filter(o-> o.isDisplay() == isDisplay.get()).toList();
-		if(category_id.isPresent()) list = list.stream().filter(o-> o.getCategoryFoods().stream().anyMatch(c -> c.getCategory().getId() == category_id.get()) ).toList();
+		if(priceMin.isPresent() && priceMin.get()>=0) list = list.stream().filter(o-> o.getPrice() >= priceMin.get()).collect(Collectors.toList());
+		if(priceMax.isPresent() && priceMax.get()>=0 ) list = list.stream().filter(o-> o.getPrice() <= priceMax.get()).collect(Collectors.toList());
+		if(quantity.isPresent()) list = list.stream().filter(o-> o.getQuantityLimit() >= quantity.get()).collect(Collectors.toList());
+		if(view.isPresent()) list = list.stream().filter(o-> o.getViewCount() >= view.get()).collect(Collectors.toList());
+		if(createDate.isPresent()) list = list.stream().filter(o-> o.getCreateDate().getTime() >=  createDate.get()).collect(Collectors.toList());
+		if(isDisplay.isPresent()) list = list.stream().filter(o-> o.isDisplay() == isDisplay.get()).collect(Collectors.toList());
+		if(category_id.isPresent()) list = list.stream().filter(o-> o.getCategoryFoods().stream().anyMatch(c -> c.getCategory().getId() == category_id.get()) ).collect(Collectors.toList());
 		return (Page<Food>) Convert.toPage(list, pageable);
 	}
 	
@@ -153,7 +153,7 @@ public class FoodServiceImpl implements FoodService{
 		List<Food> list = dao.findAll(pageable.getSort());
 		list = list.stream()
 				.filter(o -> Convert.toEngString(o.getName().toLowerCase()).contains(Convert.toEngString(keyword.toLowerCase()))
-				|| Convert.toEngString(o.getDescription().toLowerCase()).contains(Convert.toEngString(keyword.toLowerCase()))).toList();
+				|| Convert.toEngString(o.getDescription().toLowerCase()).contains(Convert.toEngString(keyword.toLowerCase()))).collect(Collectors.toList());
 		return list;
 	}
 //	Giàu
